@@ -1981,6 +1981,74 @@ int test_main()
 
 	test1.resize(100, true);
 	TEST_CHECK(test1.all_set() == true);
+
+	// test merkle_*() functions
+
+	// this is the structure:
+	//             0
+	//      1              2
+	//   3      4       5       6
+	//  7 8    9 10   11 12   13 14
+	// num_leafs = 8
+
+	TEST_EQUAL(merkle_num_leafs(1), 1);
+	TEST_EQUAL(merkle_num_leafs(2), 2);
+	TEST_EQUAL(merkle_num_leafs(3), 4);
+	TEST_EQUAL(merkle_num_leafs(4), 4);
+	TEST_EQUAL(merkle_num_leafs(5), 8);
+	TEST_EQUAL(merkle_num_leafs(6), 8);
+	TEST_EQUAL(merkle_num_leafs(7), 8);
+	TEST_EQUAL(merkle_num_leafs(8), 8);
+	TEST_EQUAL(merkle_num_leafs(9), 16);
+	TEST_EQUAL(merkle_num_leafs(10), 16);
+	TEST_EQUAL(merkle_num_leafs(11), 16);
+	TEST_EQUAL(merkle_num_leafs(12), 16);
+	TEST_EQUAL(merkle_num_leafs(13), 16);
+	TEST_EQUAL(merkle_num_leafs(14), 16);
+	TEST_EQUAL(merkle_num_leafs(15), 16);
+	TEST_EQUAL(merkle_num_leafs(16), 16);
+	TEST_EQUAL(merkle_num_leafs(17), 32);
+	TEST_EQUAL(merkle_num_leafs(18), 32);
+
+	// parents
+	TEST_EQUAL(merkle_get_parent(1), 0);
+	TEST_EQUAL(merkle_get_parent(2), 0);
+	TEST_EQUAL(merkle_get_parent(3), 1);
+	TEST_EQUAL(merkle_get_parent(4), 1);
+	TEST_EQUAL(merkle_get_parent(5), 2);
+	TEST_EQUAL(merkle_get_parent(6), 2);
+	TEST_EQUAL(merkle_get_parent(7), 3);
+	TEST_EQUAL(merkle_get_parent(8), 3);
+	TEST_EQUAL(merkle_get_parent(9), 4);
+	TEST_EQUAL(merkle_get_parent(10), 4);
+	TEST_EQUAL(merkle_get_parent(11), 5);
+	TEST_EQUAL(merkle_get_parent(12), 5);
+	TEST_EQUAL(merkle_get_parent(13), 6);
+	TEST_EQUAL(merkle_get_parent(14), 6);
+
+	// siblings
+	TEST_EQUAL(merkle_get_sibling(1), 2);
+	TEST_EQUAL(merkle_get_sibling(2), 1);
+	TEST_EQUAL(merkle_get_sibling(3), 4);
+	TEST_EQUAL(merkle_get_sibling(4), 3);
+	TEST_EQUAL(merkle_get_sibling(5), 6);
+	TEST_EQUAL(merkle_get_sibling(6), 5);
+	TEST_EQUAL(merkle_get_sibling(7), 8);
+	TEST_EQUAL(merkle_get_sibling(8), 7);
+	TEST_EQUAL(merkle_get_sibling(9), 10);
+	TEST_EQUAL(merkle_get_sibling(10), 9);
+	TEST_EQUAL(merkle_get_sibling(11), 12);
+	TEST_EQUAL(merkle_get_sibling(12), 11);
+	TEST_EQUAL(merkle_get_sibling(13), 14);
+	TEST_EQUAL(merkle_get_sibling(14), 13);
+
+	// total number of nodes given the number of leafs
+	TEST_EQUAL(merkle_num_nodes(1), 1);
+	TEST_EQUAL(merkle_num_nodes(2), 3);
+	TEST_EQUAL(merkle_num_nodes(4), 7);
+	TEST_EQUAL(merkle_num_nodes(8), 15);
+	TEST_EQUAL(merkle_num_nodes(16), 31);
+
 	return 0;
 }
 
