@@ -28,6 +28,8 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fixed merkle tree torrent creation bug
+	* fixed crash with empty url-lists in torrent files
 	* added missing max_connections() function to python bindings
 
 0.16.7 release
